# exchange-latencies-profiler

./: .gitignore  Dockerfile  Makefile  README.md  data-model.mermaid  docker-compose.base.yml  docker-compose.infra.base.yml  docker-compose.infra.local.yml  docker-compose.infra.yml  docker-compose.local.yml  docker-compose.single.server.binance.yml  exchange-latencies-profiler.service  pyproject.toml  runtime-sequence.mermaid  system-architecture.mermaid  website-widget.html
migrations/: env.py
migrations/versions/: 4d932fd3bd66_.py  51cfec6f622b_update_column_name.py  ae6b6519ef2b_renames_aggregation_field.py  b3d44be74c52_initial_migration.py  b59457bec544_adds_coordinates_for_cloud_instances.py
scripts/: ec2_run_profiler_app.sh  ec2_run_server_app.sh  ec2_setup.sh  prestart.sh
src/: background_fetcher.py  cache_manager.py  config.py  constants.py  data.py  initial_data.py  logging_config.py  logging_utils.py  pre_start.py  profiler.py  profiler_app.py  server_app.py  trade_receipts_aggregator.py
src/api/: deps.py  main.py  responses.py  routes.py
src/clients/: threaded_streamer_base.py
src/clients/rest_clients/: binance_rest_client.py  rest_client_base.py
src/clients/ws_clients/: binance_ws_client.py  ws_client_base.py
src/db/: crud.py  db.py  db_cleaner.py  model.py
src/time/: server_time_provider.py  time_synchronizer.py  utils.py
